Resume HTTP job when retrying request with different proxy

BUG=787148

Change-Id: I3b8de35f8179f6f45679d75ef210b9ec8500dab2
Reviewed-on: https://chromium-review.googlesource.com/794070
Commit-Queue: Andrei Kapishnikov <kapishnikov@chromium.org>
Reviewed-by: Helen Li <xunjieli@chromium.org>
Cr-Commit-Position: refs/heads/master@{#519800}
Former-commit-id: 7c2e70a2d9251e49b4d72e2344de54d031a5b228