net/http/http_stream_factory_impl_job_controller_unittest.cc
@@ -556,6 +556,151 @@ TEST_P(JobControllerReconsiderProxyAfterErrorTest, ReconsiderProxyAfterError) {
   EXPECT_TRUE(HttpStreamFactoryImplPeer::IsJobControllerDeleted(factory_));
 }
 
+// Tests that the main (HTTP) job is started after the alternative
+// proxy server job has failed. There are 3 jobs in total that are run
+// in the following sequence: alternative proxy server job,
+// delayed HTTP job with the first proxy server, HTTP job with
+// the second proxy configuration. The result of the last job (OK)
+// should be returned to the delegate.
+TEST_F(JobControllerReconsiderProxyAfterErrorTest,
+       SecondMainJobIsStartedAfterAltProxyServerJobFailed) {
+  // Configure the proxies and initialize the test.
+  std::unique_ptr<ProxyService> proxy_service =
+      ProxyService::CreateFixedFromPacResult("HTTPS myproxy.org:443; DIRECT");
+
+  auto test_proxy_delegate = std::make_unique<TestProxyDelegate>();
+  test_proxy_delegate->set_alternative_proxy_server(
+      ProxyServer::FromPacString("QUIC myproxy.org:443"));
+
+  Initialize(std::move(proxy_service), std::move(test_proxy_delegate));
+
+  // Enable delayed TCP and set time delay for waiting job.
+  QuicStreamFactory* quic_stream_factory = session_->quic_stream_factory();
+  quic_stream_factory->set_require_confirmation(false);
+  ServerNetworkStats stats1;
+  stats1.srtt = base::TimeDelta::FromSeconds(100);
+  session_->http_server_properties()->SetServerNetworkStats(
+      url::SchemeHostPort(GURL("http://www.example.com")), stats1);
+
+  // Prepare the mocked data.
+  MockQuicData quic_data;
+  quic_data.AddRead(ASYNC, ERR_QUIC_PROTOCOL_ERROR);
+  quic_data.AddWrite(ASYNC, OK);
+  quic_data.AddSocketDataToFactory(session_deps_.socket_factory.get());
+
+  StaticSocketDataProvider tcp_data_1;
+  tcp_data_1.set_connect_data(MockConnect(SYNCHRONOUS, ERR_CONNECTION_REFUSED));
+  session_deps_.socket_factory->AddSocketDataProvider(&tcp_data_1);
+
+  StaticSocketDataProvider tcp_data_2;
+  tcp_data_2.set_connect_data(MockConnect(SYNCHRONOUS, OK));
+  session_deps_.socket_factory->AddSocketDataProvider(&tcp_data_2);
+  SSLSocketDataProvider ssl_data(SYNCHRONOUS, OK);
+  session_deps_.socket_factory->AddSSLSocketDataProvider(&ssl_data);
+
+  // Create a request.
+  HttpRequestInfo request_info;
+  request_info.method = "GET";
+  request_info.url = GURL("http://www.example.com");
+  AlternativeService alternative_service(kProtoQUIC, "www.example.com", 80);
+  SetAlternativeService(request_info, alternative_service);
+
+  EXPECT_CALL(request_delegate_, OnStreamReadyImpl(_, _, _)).Times(1);
+  EXPECT_CALL(request_delegate_, OnStreamFailed(_, _, _)).Times(0);
+
+  // Create the job controller.
+  std::unique_ptr<HttpStreamRequest> request =
+      CreateJobController(request_info);
+
+  base::RunLoop().RunUntilIdle();
+
+  EXPECT_TRUE(quic_data.AllReadDataConsumed());
+  EXPECT_TRUE(quic_data.AllWriteDataConsumed());
+  EXPECT_TRUE(tcp_data_1.AllReadDataConsumed());
+  EXPECT_TRUE(tcp_data_1.AllWriteDataConsumed());
+  EXPECT_TRUE(tcp_data_2.AllReadDataConsumed());
+  EXPECT_TRUE(tcp_data_2.AllWriteDataConsumed());
+}
+
+// Tests that the second main (HTTP) job is resumed after change in proxy
+// configuration. When the proxy configuration changes, the job controller
+// retries the previously failed jobs with the new configuration. Since there is
+// an alternative job, the first and the second main jobs are delayed. The test
+// verifies that the jobs are resumed after the alternative jobs failed.
+// The result (OK) of the second main job should be returned to the delegate.
+// Regression test for crbug.com/787148.
+TEST_F(JobControllerReconsiderProxyAfterErrorTest,
+       SecondMainJobIsResumedAfterProxyConfigChange) {
+  // Initialize the test with direct connection.
+  std::unique_ptr<ProxyService> proxy_service = ProxyService::CreateDirect();
+  ProxyService* proxy_service_raw = proxy_service.get();
+  session_deps_.proxy_service = std::move(proxy_service);
+
+  // Create a request.
+  HttpRequestInfo request_info;
+  request_info.method = "GET";
+  request_info.url = GURL("https://www.example.com:443");
+
+  HttpStreamFactoryImplJobControllerTest::Initialize(request_info);
+
+  // Add QUIC hint.
+  AlternativeService alternative_service(kProtoQUIC, "www.example.com", 443);
+  SetAlternativeService(request_info, alternative_service);
+
+  // Enable delayed TCP and set time delay for waiting job.
+  QuicStreamFactory* quic_stream_factory = session_->quic_stream_factory();
+  quic_stream_factory->set_require_confirmation(false);
+  ServerNetworkStats stats1;
+  stats1.srtt = base::TimeDelta::FromSeconds(100);
+  session_->http_server_properties()->SetServerNetworkStats(
+      url::SchemeHostPort(GURL("https://www.example.com:443")), stats1);
+
+  // Prepare the mocked data.
+  crypto_client_stream_factory_.set_handshake_mode(
+      MockCryptoClientStream::COLD_START);
+  MockQuicData quic_data_1;
+  quic_data_1.AddRead(ASYNC, ERR_QUIC_PROTOCOL_ERROR);
+  quic_data_1.AddSocketDataToFactory(session_deps_.socket_factory.get());
+
+  StaticSocketDataProvider tcp_data_1;
+  tcp_data_1.set_connect_data(MockConnect(SYNCHRONOUS, ERR_CONNECTION_REFUSED));
+  session_deps_.socket_factory->AddSocketDataProvider(&tcp_data_1);
+
+  MockQuicData quic_data_2;
+  quic_data_2.AddRead(ASYNC, ERR_QUIC_PROTOCOL_ERROR);
+  quic_data_2.AddSocketDataToFactory(session_deps_.socket_factory.get());
+
+  StaticSocketDataProvider tcp_data_2;
+  tcp_data_2.set_connect_data(MockConnect(SYNCHRONOUS, OK));
+  session_deps_.socket_factory->AddSocketDataProvider(&tcp_data_2);
+  SSLSocketDataProvider ssl_data(SYNCHRONOUS, OK);
+  session_deps_.socket_factory->AddSSLSocketDataProvider(&ssl_data);
+
+  EXPECT_CALL(request_delegate_, OnStreamReadyImpl(_, _, _)).Times(1);
+  EXPECT_CALL(request_delegate_, OnStreamFailed(_, _, _)).Times(0);
+
+  // Create the job controller.
+  std::unique_ptr<HttpStreamRequest> request =
+      CreateJobController(request_info);
+
+  // Calling ForceReloadProxyConfig will cause the proxy configuration to
+  // change. It will still be the direct connection but the configuration
+  // version will be bumped. That is enough for the job controller to restart
+  // the jobs.
+  proxy_service_raw->ForceReloadProxyConfig();
+
+  base::RunLoop().RunUntilIdle();
+
+  EXPECT_TRUE(quic_data_1.AllReadDataConsumed());
+  EXPECT_TRUE(quic_data_1.AllWriteDataConsumed());
+  EXPECT_TRUE(quic_data_2.AllReadDataConsumed());
+  EXPECT_TRUE(quic_data_2.AllWriteDataConsumed());
+  EXPECT_TRUE(tcp_data_1.AllReadDataConsumed());
+  EXPECT_TRUE(tcp_data_1.AllWriteDataConsumed());
+  EXPECT_TRUE(tcp_data_2.AllReadDataConsumed());
+  EXPECT_TRUE(tcp_data_2.AllWriteDataConsumed());
+}
+
 // Regression test for crbug.com/723589.
 TEST_P(JobControllerReconsiderProxyAfterErrorTest,
        ProxyResolutionSucceedsOnReconsiderAsync) {
